# stock-debate-advisor

./: .gitignore  AGENT_ROLES.md  GITHUB_ACTIONS_DELIVERY_SUMMARY.md  LICENSE  README.md  package-lock.json
v1/: ARCHITECTURE_CLEAN_SUMMARY.md  README.md  SENTIMENT_INTEGRATION_SUMMARY.md  TYPE_SUPPRESSION_NOTES.md  demo_financial_client.py  demo_zstock_adapter.py  environment.yml  pyproject.toml  requirements.txt  setup_env.sh
v1/agents/: __init__.py  aggregator_agent.py  analyzer_agent.py  base_agent.py  chat_agent.py  crawler_agent.py  debate_agent.py  parser_agent.py
v1/infra/: config.yaml  docker-compose.yml  observability.py
v1/infra/airflow_dags/: ingest_dag.py
v1/integrations/: __init__.py  autogen_client.py  financial_data_client.py  gemini_client.py  json_utils.py  news_crawler.py  sentiment_analyzer.py  vietcap_client.py  zstock_adapter.py
v1/orchestrator/: autogen_debate.py  run_autogen.py
v3/autogen_debate_poc/: Dockerfile  IMPLEMENTATION_STATUS.md  README.md  SIMPLE_README.md  SIMPLIFICATION_SUMMARY.md  SYSTEM_SUMMARY.md  TEST_RESULTS.md  app.py  check_autogen.py  check_packages.py  debate_orchestrator.py  demo_debate.py  discover_autogen_api.py  docker-compose.yml  find_autogen_modules.py  install_classic_autogen.py  populate_demo_cache.py  pyproject.toml  requirements.txt  simple_app.py  test_cache.py  test_news_crawler.py  test_refactored_adapters.py  test_sector_keywords.py  test_setup.sh  test_simple_system.py  test_simple_vietcap.py  test_streamlit_enhancements.py  test_vietcap_data.py  test_vietcap_direct.py  test_vietstock_crawler.py
v3/autogen_debate_poc/adapters/: __init__.py  base_adapter.py  vietcap_adapter.py  yfinance_adapter.py
v3/autogen_debate_poc/agents/: fundamental_agent.py  moderator_agent.py  sentiment_agent.py  technical_agent.py
v3/autogen_debate_poc/data/: debate_cache.db
v3/autogen_debate_poc/data/staging/: MBB_20251106_052752.json  VNM_20251106_053807.json
v3/autogen_debate_poc/prompts/: fundamental_prompt.txt  moderator_prompt.txt  sentiment_prompt.txt  technical_prompt.txt
v3/autogen_debate_poc/services/: data_cache_service.py  database.py  debate_orchestrator.py  news_crawler.py  prompt_service.py  stock_data_service.py  vietcap_service.py
v4/autogen_debate_poc/: .env.example  .gitignore  Dockerfile  STREAMLIT_BUILD_COMPLETE.txt  analysis_tools.py  app.py  crawl_mb_news.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup_mongodb.py  setup_postgresql.py  streamlit_demo.py  streamlit_run.sh  test_v4_system.py  test_vietcap_apis.py  validate.py
v4/autogen_debate_poc/.streamlit/: config.toml
v4/autogen_debate_poc/agents/: base_agent.py  fundamental_agent.py  human_proxy_agent.py  judge_agent.py  moderator_agent.py  sentiment_agent.py  technical_agent.py
v4/autogen_debate_poc/analysis_scripts/: fundamental_analysis.py  sentimental_analysis.py  technical_analysis.py
v4/autogen_debate_poc/api_responses/: iq.vietcap.com.vn_api_iq-insight-service_v1_company-ratio-daily_MBB_lengthReport=10.txt  iq.vietcap.com.vn_api_iq-insight-service_v1_company_MBB_financial-statement_section=BALANCE_SHEET.txt  iq.vietcap.com.vn_api_iq-insight-service_v1_company_MBB_financial-statement_section=INCOME_STATEMENT.txt  iq.vietcap.com.vn_api_iq-insight-service_v1_company_MBB_price-chart_lengthReport=10_toCurrent=true.txt  iq.vietcap.com.vn_api_iq-insight-service_v1_company_MBB_statistics-financial.txt  iq.vietcap.com.vn_api_iq-insight-service_v1_company_MBB_technical_ONE_DAY.txt
v4/autogen_debate_poc/db/: models.py
v4/autogen_debate_poc/docs/: ARCHITECTURE_VISUAL.md  DEPLOYMENT.md  EXTENSION_ARCHITECTURE.md  PHASE3_COMPLETION.md  PHASE3_INTEGRATION_GUIDE.md  PHASE4_READINESS.md  README.md
v4/autogen_debate_poc/prompts/: fundamental.txt  judge.txt  moderator.txt  sentiment.txt  technical.txt
v4/autogen_debate_poc/services/: data_service.py  debate_logger.py  debate_orchestrator.py  gemini_service.py  judge_team.py
v8/: .env.example  .gitignore  ARCHITECTURE.md  BACKEND_SPECIFICATION.md  BATCH2_IMPLEMENTATION_SUMMARY.md  BATCH_1_2_3_VERIFICATION_REPORT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DATA_PIPELINE_SPEC.md  DEVELOPMENT_PLAN.md  FIREBASE_ARCHITECTURE.md  FRONTEND_SPECIFICATION.md  IMPLEMENTATION_ROADMAP.md  MONOREPO_ARCHITECTURE.md  PROJECT_STATUS.md  README.md  ZERO_COST_ARCHITECTURE.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
v8/apps/frontend/: .env.example  README.md  index.html  package.json  tailwind.config.js
v8/apps/frontend/src/: App.tsx  index.css
v8/apps/frontend/src/hooks/: useAuth.ts
v8/docs/: GETTING_STARTED.md
v8/infrastructure/: README.md
v8/infrastructure/docker/: docker-compose.dev.yml
v8/libs/: README.md
v8/libs/shared-db/: README.md  pyproject.toml
v8/libs/shared-db/shared_db/: __init__.py  base.py  session.py
v8/libs/shared-db/tests/: __init__.py  test_db.py
v8/libs/shared-models/: README.md  pyproject.toml
v8/libs/shared-models/shared_models/: __init__.py  base.py  debate.py  stock.py  user.py
v8/libs/shared-models/tests/: __init__.py  test_models.py
v8/libs/shared-utils/: README.md  pyproject.toml
v8/libs/shared-utils/shared_utils/: __init__.py  cache.py  logging.py  validation.py
v8/libs/shared-utils/tests/: __init__.py  test_utils.py
v8/services/: README.md  SERVICES_SUMMARY.md
v8/services/ai-service/: .env.example  Dockerfile  README.md  pyproject.toml
v8/services/ai-service/alembic/: env.py
v8/services/ai-service/app/: __init__.py  config.py
v8/services/ai-service/tests/: conftest.py  test_ai.py
v8/services/analytics-service/: .dockerignore  .env.example  DEPLOYMENT_READY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  pyproject.toml
v8/services/data-service/: .env.example  README.md  pyproject.toml
v8/services/debate-service/: .env.example  README.md  pyproject.toml
v8/services/notification-service/: .dockerignore  .env.example  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  pyproject.toml
v8/services/user-service/: .env.example  README.md  pyproject.toml
(+685 files in other folders)
