[tool.poetry]
name = "agentic-financial-suite"
version = "0.1.0"
description = "Gemini + Autogen financial reasoning multi-agent starter project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6"
requests = "^2.31"
fastapi = "^0.95"
uvicorn = "^0.22"
sqlalchemy = "^2.1"
asyncpg = "^0.29"
pymilvus = "^2.1"
minio = "^7.1"
kafka-python = "^2.0"
pdfplumber = "^0.7"
camelot-py[cv] = "^0.10"
pytesseract = "^0.3"
playwright = "^1.44"
sentence-transformers = "^2.2"
opentelemetry-api = "^1.23"
opentelemetry-sdk = "^1.23"
prometheus-client = "^0.16"
autogen = "^0.1" # placeholder for Microsoft Autogen python package
gemini-sdk = "^0.1" # placeholder for Gemini SDK (function-calling client)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
