[project]
name = "autogen-debate-poc"
version = "3.0.0"
description = "Microsoft Autogen Multi-Agent Financial Debate POC for Vietnamese Stock Market"
authors = [{name = "VMO Team"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"

[project.dependencies]
streamlit = ">=1.29"
requests = ">=2.31"
requests-cache = ">=1.1"
pandas = ">=2.1"
numpy = ">=1.25"
beautifulsoup4 = ">=4.12"
lxml = ">=4.9"
aiohttp = ">=3.9"
python-dotenv = ">=1.0"
autogen-agentchat = ">=0.2.0"
google-generativeai = ">=0.8"
yfinance = ">=0.2"
python-dateutil = ">=2.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
