[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-debate-poc"
version = "4.0.0"
description = "Minimal, production-ready multi-agent stock investment debate system using Gemini API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI Agent", email = "agent@example.com"}
]

dependencies = [
    "pyautogen==0.2.21",
    "google-generativeai>=0.8.0",
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "pandas-ta>=0.3.14b0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "yfinance>=0.2.30",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "python-json-logger>=2.0.0",
    "backoff>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "pylint>=2.17",
    "mypy>=1.0",
]

[tool.setuptools]
packages = ["agents", "services", "db"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
